--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,8 +137,10 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fast-image')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
+    compile project(':react-native-full-screen')
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
