--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'spb'
+include ':react-native-fast-image'
+project(':react-native-fast-image').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fast-image/android')
+include ':react-native-full-screen'
+project(':react-native-full-screen').projectDir = file('../node_modules/react-native-full-screen/android')
 
 include ':app'
