--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-fast-image": "^4.0.14",
+    "react-native-full-screen": "0.0.2",
     "react-native-progress": "^3.5.0",
     "rn-sliding-up-panel": "^1.2.0"
   },
